# consult-boosting-ner

./: .gitattributes  Makefile  README.md  pyproject.toml
docs/: setting-mecab.md
examples/klue-roberta-base/: README.md  tokenizer.json
experiment/evaluation/: roberta-klue-ner.py
models/roberta-base/: config.json  model.safetensors
models/roberta-klue-ner/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  tokenizer.json  trainer_state.json
module_ner/: main.py
module_ner/config/: env.py
module_ner/datapreproc/: retokenizer.py
module_ner/training/: __init__.py  trainer.py
module_ner_infer/: main.py
module_ner_infer/api/: __init__.py  index.py
module_ner_infer/api/routers/: inference.py
module_ner_infer/core/: env.py
module_ner_infer/services/: inference.py
