# Project configuration file with package metadata for modules and configuration for tools like black
# 1. Build System for Essential `poetry` Configuration
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "module_ner"}]

[project]
name = "consult-boosting-ner"
version = "0.1.0"
description = ""
authors = [
    {name = "becleverksh",email = "becleverksh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "datasets (>=4.4.2,<5.0.0)",
    "huggingface-hub (>=0.34.0,<1.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "google-genai (>=1.56.0,<2.0.0)",
    "seqeval (>=1.2.2,<2.0.0)",
    "accelerate (>=0.26.0)",
    "python-dotenv (>=1.0.1)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "konlpy (>=0.6.0,<0.7.0)",
    "mecab-python3 (>=1.0.12,<2.0.0)",
]

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
